--- a/ekalavya.html
+++ b/ekalavya.html
@@ -1,4 +1,1 @@
-<div><p>Shashank</p></div>
-<h1>Welcome to the website</h1>
-<h2>Good Morning</h2>
-<P>Working on Feature branch </P>
+<div><p>Shashank Kini</p></div>
